# tic-tac-toe

./: .env.example  README.md  deploy.sh  docker-compose.yaml
frontend/: .gitignore  Dockerfile  (+3 more)
services/api-service/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
services/api-service/app/: exceptions.py  main.py  models.py  utils.py
services/api-service/app/api/: deps.py  router.py
services/api-service/app/core/: base_model.py  database.py  redis.py  security.py  settings.py
services/api-service/app/dao/: uow.py
services/api-service/app/redis_scripts/: matchmaking.lua
services/api-service/app/schemas/: base.py  game.py  player.py  user.py
services/api-service/app/services/: game.py  player.py  user.py
services/api-service/db/: schema.sql
services/api-service/db/migrations/: 20260131112224_init_db.sql  20260203132911_add_created_at_updated_at.sql  20260203142029_add_default_values_players.sql  20260203142523_add_default_uuid_player.sql  20260203152437_add_default_rating_player.sql  20260224135419_add_users_table.sql  20260224160250_add_created_at_users.sql  20260301114306_player_add_image_url.sql  20260305083202_add_game_table.sql  20260307114809_update_game_table_winner_id.sql  20260315072840_update_game_table_again.sql
services/api-service/scripts/: delete_users.py  dev.sh  test.sh
services/api-service/tests/: conftest.py
services/api-service/tests/e2e/: test_game.py  test_login.py  test_player.py
services/api-service/tests/unit/: test_game_service.py  test_model.py  test_player_service.py  test_security.py  test_user_service.py
(+103 files in other folders)
